--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
     "yarn": ">= 1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "apexcharts": "^3.36.3",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "flowbite": "^1.5.5",
     "flowbite-react": "^0.3.7",
     "react-apexcharts": "^1.4.0",
-    "react-icons": "^4.7.1"
+    "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
